# simmips_rust

./: '  2  ;  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
asm_files/parse_fail/: test00.asm  test01.asm  test04.asm  test05.asm  test06.asm  test08.asm  test09.asm
asm_files/parse_success/: test00.asm  test01.asm  test02.asm  test03.asm  test04.asm  test05.asm  test06.asm  test07.asm
scripts/: integration_test.py
src/: cpu.rs  main.rs  tui.rs
src/column_views/: memory_view.rs  mod.rs  register_view.rs
src/column_views/grid_cell/: imp.rs  mod.rs
src/cpu/: alu.rs  control_unit.rs  cpu_interface.rs  data_memory.rs  instruction_memory.rs  mod.rs  piplined_cpu.rs  single_cycle_cpu.rs  single_cycle_tests.rs  utils.rs  virtualmachine.rs
src/grid_cell/: imp.rs  mod.rs
src/info_dialog/: mod.rs
src/lex_parse/: lexer.rs  lexer_tests.rs  mod.rs  parser.rs  parser_tests.rs  token.rs  token_tests.rs  util.rs  virtual_machine_interface.rs  virtual_machine_tests.rs  virtualmachine.rs  vm_defs.rs
src/ui_components/: asm_view.rs  component_view.rs  cpu_simulation.rs  history.rs  mod.rs  preferences.rs  simple_view.rs
src/ui_components/column_views/: memory_view.rs  mod.rs  register_view.rs
src/ui_components/component_view/: mod.rs
src/ui_components/header/: mod.rs
src/ui_components/simple_view/: mod.rs
src/utils/: mod.rs
src/virtual_machine/: lexer.rs  lexer_tests.rs  mod.rs  parser.rs  registers.rs  util.rs  virtual_machine_interface.rs  virtual_machine_tests.rs  virtualmachine.rs  vm_defs.rs
tests/fail/unix/: test02.asm  test03.asm  test07.asm
tests/fail/win/: test00.asm  test01.asm  test02.asm  test03.asm  (+6 more)
tests/vm/: mytest100.asm  mytest101.asm  test00.asm  test01.asm  test02.asm  test03.asm  test04.asm  test05.asm  test06.asm  test07.asm  test08.asm  test09.asm  test10.asm  test11.asm  test12.asm  test13.asm  test14.asm  test15.asm  test16.asm  test17.asm  test18.asm  test19.asm  test20.asm
(+14 files in other folders)
