[package]
name = "simmips_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.0"
num-derive = "0.4.0"
num-traits = "0.2.15"
relm4 = { version = "0.7.0-beta.1", features = ["libadwaita", "gnome_43"] }
relm4-components = "0.7.0-beta.1"
mips_assembler = { git = "https://github.com/A1029384756/mips_assembler", branch = "master" }

[[bin]]
name = "simmips_gui"
path = "src/main.rs"

[[bin]]
name = "simmips_tui"
path = "src/tui.rs"
